BUGFIX ::: updating gpg release
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@45188 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -189,6 +189,7 @@ build_deploy:
     - apt-get install -y openjfx
     - apt-get install -y gnupg2
     - gpg2 --batch --import <(echo "$GPG_PRIVATE_KEY")
+    - gpg --list-keys
     - mvn $MAVEN_CLI_OPTS deploy -P deploy -Dmaven.test.skip=$SKIP_TESTS -Dci.version=${VERSION}-SNAPSHOT
     # So that the cache takes up less space
     - rm -rf .m2/repository/org/semoss
