UPDATE ::: moving to https repo for redshift
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@45688 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 80faaa97a74d3f172152ee2fba87c34e8257173c

--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
 			</repository> -->
 		<repository>
 			<id>redshift</id>
-			<url>http://redshift-maven-repository.s3-website-us-east-1.amazonaws.com/release</url>
+			<url>https://s3.amazonaws.com/redshift-maven-repository/release</url>
 		</repository>
 	</repositories>
 	<dependencies>
