--- a/py/log-config/log4j.properties
+++ b/py/log-config/log4j.properties
@@ -4,35 +4,28 @@ name = PropertiesConfig
  
 property.filename = FILE_LOCATION
  
-filter.threshold.type = ThresholdFilter
-filter.threshold.level = debug
- 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %m%n
-appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = error
+appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss} %c{1.}:%L %m%n
  
 appender.rolling.type = RollingFile
-appender.rolling.name = RollingFile
+appender.rolling.name = ROLLINGFILE
 appender.rolling.fileName = ${filename}
-appender.rolling.filePattern = output1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.filePattern = output-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.rolling.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss} %c{1.}:%L %m%n
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 2
-appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=100MB
+appender.rolling.policies.size.size = 250MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 5
+appender.rolling.strategy.max = 1000
  
-logger.rolling.name = prerna
-logger.rolling.level = debug
-logger.rolling.additivity = false
-logger.rolling.appenderRef.rolling.ref = RollingFile
- 
+logger.app.name = prerna
+logger.app.level = debug
+logger.app.additivity = false
+logger.app.appenderRef.file.ref = ROLLINGFILE
+
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = STDOUT
