UPDATE ::: Adding simple vault java driver
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@45926 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: ddf24f36751517741f74c2757ab1a92226bcb6c8

--- a/pom.xml
+++ b/pom.xml
@@ -1934,5 +1934,10 @@
 			<artifactId>oshi-core</artifactId>
 			<version>5.7.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.bettercloud</groupId>
+		    <artifactId>vault-java-driver</artifactId>
+		    <version>5.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
