UPDATE ::: Adding in mustache package dependency
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46066 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 9627950f31569ae79de7efe7ba9c1c791d040ee6

--- a/pom.xml
+++ b/pom.xml
@@ -1939,5 +1939,10 @@
 		    <artifactId>vault-java-driver</artifactId>
 		    <version>5.1.0</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.github.spullara.mustache.java</groupId>
+		  <artifactId>compiler</artifactId>
+		  <version>0.9.10</version>
+		</dependency>
 	</dependencies>
 </project>
