UPDATE ::: updating toPdf dependency to use flying saucer library for html to PDF
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46086 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 906adda83e90ff5b743e08b103a032c4253e68b4

--- a/pom.xml
+++ b/pom.xml
@@ -1749,49 +1749,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- html to pdf -->
 		<dependency>
-			<!-- ALWAYS required. -->
-			<groupId>com.openhtmltopdf</groupId>
-			<artifactId>openhtmltopdf-core</artifactId>
-			<version>${openhtml.version}</version>
-		</dependency>
-		<dependency>
-			<!-- Required for PDF output. -->
-			<groupId>com.openhtmltopdf</groupId>
-			<artifactId>openhtmltopdf-pdfbox</artifactId>
-			<version>${openhtml.version}</version>
-		</dependency>
-		<dependency>
-			<!-- Required for image output only. -->
-			<groupId>com.openhtmltopdf</groupId>
-			<artifactId>openhtmltopdf-java2d</artifactId>
-			<version>${openhtml.version}</version>
-		</dependency>
-		<dependency>
-			<!-- Optional, leave out if you do not need logging via slf4j. -->
-			<groupId>com.openhtmltopdf</groupId>
-			<artifactId>openhtmltopdf-slf4j</artifactId>
-			<version>${openhtml.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<!-- Optional, leave out if you do not need logging via log4j. -->
-			<groupId>com.openhtmltopdf</groupId>
-			<artifactId>openhtmltopdf-log4j</artifactId>
-			<version>${openhtml.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
-			<optional>true</optional>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.22</version>
 		</dependency>
 		<dependency>
 			<groupId>de.ruedigermoeller</groupId>
