UPDATE ::: Adding trino JDBC on the BE
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46100 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 3cfdcc95696dc553c102d8cac34bc1cca8716878

--- a/pom.xml
+++ b/pom.xml
@@ -1475,6 +1475,11 @@
 		    <artifactId>redshift-jdbc42</artifactId>
 		    <version>1.2.43.1067</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.trino</groupId>
+		    <artifactId>trino-jdbc</artifactId>
+		    <version>376</version>
+		</dependency>
 		<!-- NODE -->
 		<dependency>
 			<groupId>com.eclipsesource.j2v8</groupId>
