--- a/pom.xml
+++ b/pom.xml
@@ -1878,13 +1878,18 @@
         <dependency>
 		  <groupId>org.elasticsearch.plugin</groupId>
 		  <artifactId>x-pack-sql-jdbc</artifactId>
-		  <version>7.9.1</version>
+		  <version>8.2.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>opensearch</groupId>
+		  <artifactId>sql-jdbc</artifactId>
+		  <version>1.1.0.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.amazon.opendistroforelasticsearch.client/opendistro-sql-jdbc -->
 		<dependency>
 		    <groupId>com.amazon.opendistroforelasticsearch.client</groupId>
 		    <artifactId>opendistro-sql-jdbc</artifactId>
-		    <version>1.11.0.0</version>
+		    <version>1.13.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xeustechnologies</groupId>
@@ -1910,6 +1915,12 @@
 		  <groupId>com.github.spullara.mustache.java</groupId>
 		  <artifactId>compiler</artifactId>
 		  <version>0.9.10</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+		<dependency>
+		    <groupId>org.apache.pdfbox</groupId>
+		    <artifactId>pdfbox</artifactId>
+		    <version>2.0.26</version>
 		</dependency>
 	</dependencies>
 </project>
