UPDATE ::: Adding in logic for ClamAV virus scanning
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46359 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/pom.xml
+++ b/pom.xml
@@ -1920,5 +1920,11 @@
 		    <artifactId>pdfbox</artifactId>
 		    <version>2.0.26</version>
 		</dependency>
+		<!-- https://github.com/cdarras/clamav-client -->
+		<dependency>
+    		<groupId>xyz.capybara</groupId>
+    		<artifactId>clamav-client</artifactId>
+    		<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 </project>
