UPDATE ::: Commenting out legacy jena-larq dependency and downstream references
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46450 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/pom.xml
+++ b/pom.xml
@@ -782,6 +782,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--  SubjectIndexer
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-larq</artifactId>
@@ -792,7 +793,7 @@
 					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency> -->
 		<!-- cleanup -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
