--- a/pom.xml
+++ b/pom.xml
@@ -1891,6 +1891,11 @@
 		  <version>1.1.0.1</version>
 		</dependency>
 		<dependency>
+		  <groupId>com.simba</groupId>
+		  <artifactId>AthenaJDBC</artifactId>
+		  <version>42</version>
+		</dependency>
+		<dependency>
 			<groupId>org.xeustechnologies</groupId>
 			<artifactId>jcl-core</artifactId>
 			<version>2.8</version>
