--- a/pom.xml
+++ b/pom.xml
@@ -845,6 +845,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- REMOVING - GPL -->
+		<!-- 
 		<dependency>
 			<groupId>org.sourceforge.jlibeps</groupId>
 			<artifactId>jlibeps</artifactId>
@@ -856,6 +858,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
