UPDATE ::: Removing itextpdf from pom and unused code referencing it
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46723 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 97d91a3db3689aa4280547abd3204057de2e9f4e

--- a/pom.xml
+++ b/pom.xml
@@ -704,6 +704,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- REMOVING - AGPL -->
+		<!-- 
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
@@ -715,6 +717,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.javatuples</groupId>
 			<artifactId>javatuples</artifactId>
