UPDATE ::: Removing unused colt jar
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46724 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: b80c3213a439d2dea8986ede08253055f2ca500f

--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- REMOVING - GPL -->
+		<!-- 
 		<dependency>
 			<groupId>colt</groupId>
 			<artifactId>colt</artifactId>
@@ -382,7 +384,7 @@
 					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency>  -->
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
