UPDATE ::: Pushing code around storing the user logins
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46737 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: f62de7f77772675cf404ef9f7e8bf5a5c70fc79a

--- a/pom.xml
+++ b/pom.xml
@@ -1953,5 +1953,11 @@
     		<artifactId>clamav-client</artifactId>
     		<version>2.1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2 -->
+		<dependency>
+		    <groupId>com.maxmind.geoip2</groupId>
+		    <artifactId>geoip2</artifactId>
+		    <version>2.16.1</version>
+		</dependency>
 	</dependencies>
 </project>
