UPDATE ::: Removing unused jar UPDATE ::: Adding in corrected logic for bulk removal
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@46927 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/pom.xml
+++ b/pom.xml
@@ -812,11 +812,14 @@
 			</exclusions>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.python/jython -->
-<!-- 		<dependency>
+		<!-- 	
+		<dependency>
 			<groupId>org.python</groupId>
 			<artifactId>jython</artifactId>
 			<version>2.7.1b3</version>
-		</dependency> -->
+		</dependency> 
+		-->
+		<!-- 
 		<dependency>
 			<groupId>org.codehaus.jet</groupId>
 			<artifactId>jet-regression</artifactId>
@@ -828,6 +831,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.jgrapht</groupId>
 			<artifactId>jgrapht-core</artifactId>
