--- a/pom.xml
+++ b/pom.xml
@@ -1955,5 +1955,11 @@
 		    <artifactId>geoip2</artifactId>
 		    <version>2.16.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.databricks/databricks-jdbc -->
+		<dependency>
+		    <groupId>com.databricks</groupId>
+		    <artifactId>databricks-jdbc</artifactId>
+		    <version>2.6.29</version>
+		</dependency>
 	</dependencies>
 </project>
