UPDATE ::: Adding semoss jdbc to the pom.xml
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@47183 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,11 @@
 		</repository>
 	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>org.semoss</groupId>
+			<artifactId>semoss-jdbc</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 		<!-- 
 		<dependency>
 			<groupId>jdk.tools</groupId>
