UPDATE ::: Adding additional properties for linotp and ldap
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@47631 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/social.properties
+++ b/social.properties
@@ -10,6 +10,8 @@ github_login true
 dropbox_login false
 ms_login false
 cac_login false
+linotp_login false
+ldap_login false
 
 google_client_id	36990976090-f92umj9mqrmjg5no2744ujdsfrjrudj2.apps.googleusercontent.com
 google_secret_key	AmoMjhN0TxKbrs3ufV7cvaJI
@@ -22,3 +24,20 @@ github_client_id	a2b2a700d6c2e144472d
 github_secret_key	38fe7841a5d61e3e0ceb8a85b1c73e6f451bd237
 github_redirect_uri	http://localhost:5355/Monolith/api/auth/login/github
 github_scope	public_repo
+
+linotp_hostname	
+linotp_realm 
+linotp_auto_add true
+
+ldap_type	single
+ldap_provider_url 
+ldap_principal_tempalte 
+ldap_key_id 
+ldap_key_name 
+ldap_key_email 
+ldap_key_username 
+ldap_key_last_pwd_change 
+ldap_search_context_name 
+ldap_search_context_scope	2
+ldap_search_matching_attributes 
+ldap_auto_add	true
