--- a/social.properties
+++ b/social.properties
@@ -10,6 +10,8 @@ github_login true
 dropbox_login false
 ms_login false
 cac_login false
+linotp_login false
+ldap_login false
 
 google_client_id	***REMOVED***
 google_secret_key	***REMOVED***
@@ -22,3 +24,20 @@ github_client_id	***REMOVED***
 github_secret_key	***REMOVED***
 github_redirect_uri	http://localhost:5355/Monolith/api/auth/login/github
 github_scope	public_repo
+
+linotp_hostname	
+linotp_realm 
+linotp_auto_add true
+
+ldap_type	single
+ldap_provider_url 
+ldap_principal_tempalte 
+ldap_key_id 
+ldap_key_name 
+ldap_key_email 
+ldap_key_username 
+ldap_key_last_pwd_change 
+ldap_search_context_name 
+ldap_search_context_scope	2
+ldap_search_matching_attributes 
+ldap_auto_add	true
